# atelie-log-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: python-quality.yml
migrations/: env.py
migrations/versions/: bd5884a6df5b_create_table_audit_log.py
src/: main.py
src/core/: config.py  database.py  logger.py  provider.py
src/infra/messaging/: broker.py  constants.py  exchanges.py  queues.py
src/infra/messaging/events/: payload.py
src/infra/messaging/handlers/: audit.py
src/models/: log.py
