[project]
name = "atelie-log-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.136.0",
    "faststream[cli,rabbit]>=0.7.1",
    "itsdangerous>=2.1.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.21",
    "sqlalchemy==2.0.49",
    "starlette-admin>=0.16.1",
    "taskipy>=1.14.1",
]

# --- Configuração do Taskipy ---
[tool.taskipy.tasks]
lint = "ruff check . && ruff format --check ."
format = "ruff check --fix . && ruff format ."
test = "pytest -v"
alembic = "alembic upgrade head"
 
 # --- Configuração do Ruff ---
[tool.ruff]
line-length = 88
target-version = "py312" 

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "PT"]
